# llm-driven-proof-search

./: .gitignore  CHATDB_SPEC.md  CHATDB_SPEC_DEPRECATED.md  CLAUDE.md  Cargo.toml  PROOFSEARCH_SPEC.md  PROOFSEARCH_SPEC_DEPRECATED.md  PatrickTanyaJose.lean  README.md  SPEC.md  restore-database.bat
.github/: spec-trigger  spec-trigger-3
.github/spec_payload/: chunk-00  chunk-01  chunk-01a  chunk-01b  chunk-01c  chunk-01d  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07
.github/workflows/: hadamard-replay.yml  materialize-spec.yml
EpochAI - Open Problems/: generate_hadamard_428.js  hadamard_428_proofsearch.md  verify_turyn_seed.py
EpochAI - Open Problems/Find a Hadamard matrix of order 668/: .gitignore  ARTIFACT_MANIFEST.json  EXTERNAL_PROVENANCE.md  RESULTS.md  agent_alt_search_t167_periodic.rs  agent_alt_search_tt56_dualmargin.rs  agent_alt_t167_periodic_live.json  agent_alt_t167_periodic_summary.json  agent_alt_tt56_dualmargin_live.json  agent_alt_tt56_dualmargin_summary.json  agent_bgpu_parity_classes.py  agent_bgpu_psd_cap.py  agent_bgpu_psd_run1_class_00_live.json  agent_bgpu_psd_run1_class_01_live.json  agent_bgpu_psd_run1_class_03_live.json  (+453 more)
ErdosProblems/: README.md  whitepaper.md
IMO 2026/: README.md
SolveAll Open Questions/: CLAUDE.md  README.md
benchmarks/: putnambench_smoke.json
crates/chatdb-core/: Cargo.toml
crates/chatdb-core/src/: hashing.rs  lib.rs  main.rs  putnambench.rs  schema_export.rs
crates/chatdb-core/src/db/: mod.rs  schema_v1.rs
crates/chatdb-core/src/lean/: mod.rs  module.rs
crates/chatdb-core/src/models/: action.rs  dataset.rs  episode.rs  mod.rs  reward.rs
crates/chatdb-core/src/orchestrator/: attempts.rs  context.rs  dataset.rs  lifecycle.rs  mod.rs  scheduler.rs  step.rs  trajectories.rs
crates/chatdb-core/tests/: architecture_test.rs  p0_migration_baseline.rs  p1_import_manifest_migration.rs  p2_fidelity_vocabulary_migration.rs  p3_benchmark_aligned_fidelity_migration.rs  phase11_dataset_tests.rs  phase12_conformance_tests.rs  phase5_lifecycle_tests.rs  phase6_attempts_tests.rs  phase8_step_tests.rs  phase9_trajectories_tests.rs
crates/chatdb-mcp/: Cargo.toml
crates/chatdb-mcp/examples/: import_putnambench.rs  playtest.rs  putnam_runner.rs
crates/chatdb-mcp/examples/regression_scripts/: issue41_multiline_proof_term.json
crates/chatdb-mcp/src/: lib.rs  main.rs
crates/proofsearch-mcp/: Cargo.toml
crates/proofsearch-mcp/examples/: import_putnambench.rs  playtest.rs  putnam_runner.rs
crates/proofsearch-mcp/examples/regression_scripts/: issue41_multiline_proof_term.json
crates/proofsearch-mcp/src/: lib.rs  main.rs
docs/: fix_plan_playtest_01.md  fix_plan_playtest_02.md  fix_plan_playtest_03.md  fix_plan_playtest_04.md  fix_plan_playtest_05.md  gitflow_workflow.md  handoff-reasoning-logs-sop.md  handoff-scratchpad.md  igp24_gate.md  librarian.md  llm_native_design_practices.md  mathlib-contribution-no-fermat-sub.md  roadmap.md  sop-reasoning-logs.md  submit_module.md  tdd_requirements.md
fixtures/: igp24_candidates_example.csv
jacobian counter/: Challenge.lean  ChallengeSolved.lean  CollateralDamage.lean  README.md  proof-construction.md  whitepaper.md
lean-checker/: LeanChecker.lean  README.md  lake-manifest.json  lakefile.toml
scripts/: igp24_enrich_targets.py  igp24_gate.py  igp24_generate_batch.py  igp24_generate_lift_probes.py  igp24_generate_quadratic_lifts.py  igp24_magma_verify.py  igp24_poll.py  igp24_source_cyclotomic_period.py  igp24_source_lmfdb.py  igp24_source_m24_muller.py  igp24_submit.py  igp24_targets.py
(+2044 files in other folders)
