[workspace]
resolver = "2"
members = [
    "crates/proofsearch-core",
    "crates/proofsearch-mcp"
]

[workspace.dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_jcs = "0.1.0"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
schemars = { version = "0.8.21", features = ["uuid1", "chrono"] }
