[package]
name = "chatdb_proof_core"
version = "0.3.18"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2.workspace = true
hex = { workspace = true }
schemars = { workspace = true }
tempfile = "3.27.0"
