[package]
name = "proofsearch-mcp"
version = "0.3.27"
edition = "2024"

[dependencies]
proofsearch_core = { version = "0.3.27", path = "../proofsearch-core" }
rmcp = { version = "1.8.0", features = ["client", "server", "transport-streamable-http-server"] }
rusqlite.workspace = true
chrono.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
axum = "0.8"
clap = { version = "4", features = ["derive"] }
